<resources>
    <string name="app_name">Baymax</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="amount">Amount</string>
    <string name="currency">Currency</string>
    <string name="exchange_rates">Exchange Rates</string>
    <string name="profile">Profile</string>
    <string name="exchange">Exchange</string>
    <string name="select_a_currency_desc">Select a currency and enter amount to get the current exchange rate</string>
    <string name="hey_welcome">Hey Welcome</string>
    <string name="to_baymax">to Baymax</string>
</resources>