<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
        name="viewmodel"
        type="com.francisumeanozie.baymax.modules.main.HomeViewModel" />

  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context=".BaymaxApplication"
      android:background="@color/colorPrimaryDark"
      android:fillViewport="true">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:fillViewport="true">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginTop="30dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp">

        <LinearLayout
            android:id="@+id/welcome_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start">

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/hey_welcome"
              android:textStyle="bold"
              android:textSize="18sp"
              android:textColor="@color/colorWhite"/>

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/to_baymax"
              android:textColor="@color/colorWhite"/>

        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/avatar"
            android:layout_alignEnd="@+id/welcome_txt"
            android:layout_alignParentEnd="true"/>

      </RelativeLayout>


        <FrameLayout
            android:id="@+id/framelayout"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

          <androidx.cardview.widget.CardView
              android:id="@+id/amountCardView"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="34dp"
              android:layout_marginEnd="34dp"
              android:layout_marginTop="30dp"
              app:cardCornerRadius="4dp"
              android:background="#ffffff">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

              <TextView
                  android:id="@+id/cardHolderTextView"
                  style="@style/InstructionText2"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/currency"
                  android:layout_marginBottom="8dp"
                  android:textAlignment="textStart"
                  android:textSize="14sp"/>

              <androidx.appcompat.widget.AppCompatSpinner
                  android:id="@+id/spinnerCur"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:selectedItemPosition="@={viewmodel.currencyIdItemPosition}"
                  android:padding="8dp"
                  android:textAlignment="textStart"
                  android:background="@drawable/spinner_bg"
                  android:spinnerMode="dialog"
                  android:textColorHint="@color/gray_text"/>

              <TextView
                  android:id="@+id/cardNumberTextView"
                  style="@style/InstructionText2"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="30dp"
                  android:layout_marginBottom="8dp"
                  android:text="@string/amount"
                  android:textAlignment="textStart"
                  android:textSize="14sp"/>


              <com.francisumeanozie.baymax.utils.helpers.CustomFontCurrencyEditText
                  android:id="@+id/bankNumberEditText"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@drawable/custom_input"
                  android:padding="12dp"
                  android:textSize="16sp"
                  android:maxLength="10"
                  android:text="@={viewmodel.amount}"
                  android:hint="@string/enter_amount"
                  android:textColorHint="@color/gray_text"
                  android:inputType="number"/>

            </LinearLayout>


          </androidx.cardview.widget.CardView>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/bg"
              android:layout_marginTop="120dp">

            <LinearLayout
                android:id="@+id/ln2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="125dp"
                app:layout_constraintTop_toBottomOf="@+id/arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

              <TextView
                  android:id="@+id/latestTxt"
                  android:layout_marginTop="30dp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="11dp"
                  android:text="@string/exchange_rates"
                  android:textSize="16sp"
                  android:textColor="@color/colorPrimary"
                  android:textStyle="bold"/>

              <androidx.recyclerview.widget.RecyclerView
                  android:id="@+id/rateRecyclerView"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:divider="@null"
                  android:layout_weight="1"
                  android:visibility="gone"
                  tools:listitem="@layout/exchange_list"
                  android:layout_marginTop="10dp"/>


              <TextView
                  android:id="@+id/empty"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="8dp"
                  android:layout_marginTop="45dp"
                  android:layout_marginEnd="8dp"
                  android:text="@string/select_a_currency_desc"
                  android:textAlignment="center"
                  android:textColor="#A8A8A8"
                  android:textSize="18sp"
                  android:textStyle="bold" />

              <ProgressBar
                  android:id="@+id/loading"
                  android:layout_width="29dp"
                  android:layout_height="65dp"
                  android:layout_marginTop="50dp"
                  android:layout_gravity="center"
                  android:visibility="gone" />

            </LinearLayout>

          </LinearLayout>

        </FrameLayout>

      </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        app:itemIconSize="25dp"
        app:itemIconTint="@color/bottom_nav_color"
        app:itemTextColor="@color/bottom_nav_color"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/main_bottom_nav_menu"/>

  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>




